tests/comparison_hook_impure_global_bad.stderr
tests/comparison_hook_impure_global_bad.sl:5:9: error: SL2052: comparison hook must be pure
